# markdup8x-wea

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
docs/: SPEC.md  deviations.md  nfcore-invocation.md  nftest-dropin.md  parity-evidence.md  per-locus-pileup.md  perf.md  picard-tuning-proposal.md  pikard_research.md  session-report.md  slack-draft.md  umi_semantics.md  validation.md
openspec/: config.yaml
openspec/changes/mvp/: design.md  proposal.md  tasks.md
openspec/changes/mvp/specs/duplicate-detection/: spec.md
openspec/changes/mvp/specs/dupset-strategies/: spec.md
openspec/changes/mvp/specs/paired-end-grouping/: spec.md
openspec/changes/mvp/specs/picard-metrics/: spec.md
openspec/changes/mvp/specs/quality-scoring/: spec.md
openspec/changes/mvp/specs/single-end-grouping/: spec.md
openspec/changes/mvp/specs/sort-order-validation/: spec.md
scripts/: _shim_verify.sh  picard-shim.sh
scripts/validation/: manifest.example.toml  run_local_gate.py  run_parity_batch.py
src/: barcode_tags.rs  barcodes.rs  dupset.rs  groups.rs  io.rs  lib.rs  main.rs  markdup.rs  metrics.rs  pending_mates.rs  position.rs  scan.rs  scoring.rs
tests/: algorithm_fixtures.rs  barcode_tag_smoke.rs  mi_tag_smoke.rs  smoke_fixture.rs  validation_compare.rs
tests/common/: mod.rs
